fix(tests): compile protocol-only source contracts