@@ -25,6 +25,6 @@ public final class SelfRunDriveDev3PolicyTest {
     private static String source(String name) throws Exception {
         Path path=Paths.get("app/src/main/java/com/shaterguy/chatgptselfrun/"+name);
         if(!Files.exists(path))path=Paths.get("src/main/java/com/shaterguy/chatgptselfrun/"+name);
-        return Files.readString(path,StandardCharsets.UTF_8);
+        return new String(Files.readAllBytes(path),StandardCharsets.UTF_8);
     }
 }
